// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button menu renders correctly 1`] = `
<DocumentFragment>
  <button
    class="main"
    data-testid="main"
  >
    <div>
      test-icon-el
    </div>
  </button>
</DocumentFragment>
`;

exports[`icon menu renders correctly 1`] = `
<DocumentFragment>
  <div
    class="main disable_hover"
    data-testid="main"
  >
    <div>
      test-icon-el
    </div>
  </div>
</DocumentFragment>
`;

exports[`nav menu when menu is active matches by pattern 1`] = `
<DocumentFragment>
  <button
    class="main active"
    data-testid="main"
  >
    <div>
      test-default-icon-el
    </div>
  </button>
</DocumentFragment>
`;

exports[`nav menu when menu is active renders correctly with active icon 1`] = `
<DocumentFragment>
  <button
    class="main active"
    data-testid="main"
  >
    <div>
      test-active-icon-el
    </div>
  </button>
</DocumentFragment>
`;

exports[`nav menu when menu is active renders correctly with default icon 1`] = `
<DocumentFragment>
  <button
    class="main active"
    data-testid="main"
  >
    <div>
      test-default-icon-el
    </div>
  </button>
</DocumentFragment>
`;

exports[`nav menu when menu is not active renders correctly 1`] = `
<DocumentFragment>
  <button
    class="main"
    data-testid="main"
  >
    <div>
      test-default-icon-el
    </div>
  </button>
</DocumentFragment>
`;
